# mec-data

./: .coveragerc  .gitignore  README.md  mec-data.code-workspace  pyproject.toml
alembic_static/: env.py
mec_data/controller/: crawl.py  data_lake.py  data_source.py  data_warehouse.py
mec_data/dal/: __init__.py  scholar.py  university.py
mec_data/data_lake/: __init__.py  base.py  local.py
mec_data/manage/: app.py  scripts.py  settings.py
mec_data/model/: databases.py  scholar.py  university.py
mec_data/service/: __init__.py  data_lake.py  data_source.py  data_warehouse.py
mec_data/source/: __init__.py  base.py  scholar.py  university.py
mec_data/utils/: download_manager.py  files.py
migrations/versions/: cd185fa49d08_.py
tests/: __init__.py  test_controller.py  test_data_lake.py  test_data_source.py  test_data_warehouse.py  test_file_utils.py  test_service.py
tests/mock/: scholar_co_2017.csv  university_2017.csv
