[tool.poetry]
name = "mec-data"
version = "0.1.0"
description = ""
authors = ["Rodrigo Soares <rodrigombsoares@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pylint = "^2.3.1"
bandit = "^1.6.2"
black = {version = "^19.3b0", allow-prereleases = true}
coverage = "^4.5"
autopep8 = "^1.4"

[tool.poetry.scripts]
serve = 'mec_data.manage.scripts:serve'
init = 'mec_data.manage.scripts:init'
migrate = 'mec_data.manage.scripts:migrate'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

