[tool.poetry]
name = "mec-data"
version = "0.1.0"
description = ""
authors = ["Rodrigo Soares <rodrigombsoares@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22.0"
flask-restplus = "^0.13.0"
Flask = "^1.1"
python-dotenv = "^0.10.3"
flask-sqlalchemy = "^2.4"
envclasses = "^0.2.1"
flask_accepts = "^0.15.0"
marshmallow = "^3.2"
psycopg2-binary = "^2.8"
werkzeug = "0.16.1"
Flask-Migrate = "^2.5.3"

[tool.poetry.dev-dependencies]
pylint = "^2.3.1"
bandit = "^1.6.2"
black = {version = "^19.3b0", allow-prereleases = true}
coverage = "^4.5"
autopep8 = "^1.4"

[tool.poetry.scripts]
serve = 'mec_data.manage.scripts:serve'
init = 'mec_data.manage.scripts:init'
migrate = 'mec_data.manage.scripts:migrate'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

